# Pro-POS

./: .env  .gitignore  Makefile  README.md  comments.md  deployment.txt  guiding.txt  next.config.js  package-lock copy.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: main copy.yml  main.yml
app/: closingDialog.tsx  connector.tsx  context.tsx  custom.css  error.tsx  initialCopy.tsx  initialSetUp.tsx  initiator.tsx  layout.tsx  page.tsx  server.tsx
app/admin/: dashboard.tsx  layout.tsx  page.tsx
app/cashier/: page stored.tsx  page.tsx  payments.tsx  paymentsToggler.tsx  queue.tsx  sale.tsx  settings.tsx  settingsSheet.tsx
app/greet/: greet.tsx  page.tsx
app/sharedComponents/: zoom.tsx
src-tauri/: Cargo.toml  local.txt  sqlite.db  tauri.conf copy.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230926202334_user_table.sql  20240320202335_branches_table.sql
src-tauri/migrations/postgres/: 0001_user_table.sql  0002_branches_table.sql
src-tauri/migrations/sqlite/: 0001_user_table.sql  0002_branches_table.sql
src-tauri/src/: db.rs  db_connections copy.rs  db_connections.rs  main copy 2.rs  main copy 3.rs  main copy.rs  main-copy.rs  main.rs
src-tauri/src/connections/: db.rs
src-tauri/src/models/: user.rs
src-tauri/src/routes/: branches.rs  global.rs  login.rs  mod.rs  permissions.rs  roles.rs  users copy.rs  users.rs
src-tauri/src/settings/: global.rs  mod.rs  server copy.rs  server.rs
src/components/: customSheet.tsx  error.tsx  expandableSearch.tsx  globalSheet.tsx  globalsearch.tsx  info.tsx  loading.tsx  resizableSheet.tsx  (+3 more)
(+44 files in other folders)
