[package]
name = "app"
version = "0.1.2"
description = "Truecode POS"
authors = ["silomalo"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.72.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dirs = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
tauri = { version = "1.4.1", features = [ "api-all"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx-cli = "0.7.1"
thiserror = "1.0.49"
futures = "0.3.18"



[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[profile.release]
panic = "abort" # strip expensive panic clean-up logic
# codegen-units = 1 #compiles creates one after another to reduce memory usage
lto = true #enable link optimization
opt-level = "s" #optimize for size --MOST IMPORTANT
# strip = true #strip debug symbols